--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,6 @@ dependencies {
 
     implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
     implementation 'com.karumi:dexter:6.2.3'
+
+   // implementation 'com.squareup.okhttp3:loggin-interceptor:4.2.1'
 }
