--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,11 +41,11 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.junit.jupiter:junit-jupiter'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -71,5 +71,9 @@ dependencies {
     implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
     implementation 'com.karumi:dexter:6.2.3'
 
-   // implementation 'com.squareup.okhttp3:loggin-interceptor:4.2.1'
+    implementation"androidx.room:room-runtime:2.4.3"
+    annotationProcessor("androidx.room:room-compiler:2.4.3")
+
+
+    // implementation 'com.squareup.okhttp3:loggin-interceptor:4.2.1'
 }
