--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
-
     implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
 
@@ -73,6 +72,7 @@ dependencies {
 
     implementation"androidx.room:room-runtime:2.4.3"
     annotationProcessor("androidx.room:room-compiler:2.4.3")
+    androidTestImplementation "android.arch.persistence.room:testing:2.4.3"
 
 
     // implementation 'com.squareup.okhttp3:loggin-interceptor:4.2.1'
