--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,5 +82,5 @@ dependencies {
     annotationProcessor("androidx.room:room-compiler:2.4.3")
 
 
-    // implementation 'com.squareup.okhttp3:loggin-interceptor:4.2.1'
+     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
 }
