--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.sahibaliyev.mymobibook"
         minSdk 24
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -40,21 +40,22 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.annotation:annotation:1.4.0'
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.junit.jupiter:junit-jupiter'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
 
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0-alpha01"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.0-alpha01"
-    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0-alpha01")
-    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.6.0-alpha01")
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.0-alpha02"
+    implementation("androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0-alpha02")
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.6.0-alpha02")
     implementation("android.arch.lifecycle:extensions:1.1.1")
 
 
@@ -79,8 +80,12 @@ dependencies {
     implementation 'com.karumi:dexter:6.2.3'
 
     implementation"androidx.room:room-runtime:2.4.3"
-    annotationProcessor("androidx.room:room-compiler:2.4.3")
+//    kapt("androidx.room:room-compiler:2.4.3")
+
+    implementation 'androidx.room:room-ktx:2.4.3'
+    kapt "androidx.room:room-compiler:2.4.3"
 
 
-     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+
+     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.10'
 }
