--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.sahibaliyev.mymobibook">
+    package="com.sahibaliyev.mymobibook" >
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
 
     <application
         android:allowBackup="true"
@@ -16,14 +15,14 @@
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyMobiBook"
-        >
+        android:theme="@style/Theme.MyMobiBook" >
+
         <activity
             android:name=".activity.BooksInCategoryActivity"
             android:exported="false" />
         <activity
             android:name=".activity.ReadBook"
-            android:exported="false"    />
+            android:exported="false" />
         <activity
             android:name=".activity.BookAboutActivity"
             android:exported="false" />
@@ -35,21 +34,22 @@
             android:exported="false" />
         <activity
             android:name=".other.SplashScreen"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+
         <provider
-            android:authorities="com.sahibaliyev.mymobibook.fileprovider"
             android:name="androidx.core.content.FileProvider"
+            android:authorities="com.sahibaliyev.mymobibook.fileprovider"
             android:exported="false"
-            android:grantUriPermissions="true">
-            <meta-data android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_path"/>
+            android:grantUriPermissions="true" >
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_path" />
         </provider>
     </application>
 
